# play

./: .eslintrc  .gitignore  .travis.yml  ChangeLog  README.rst  pytest.ini  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
docs/: testing.rst
etc/play/: config.yml
play/: config.py  default_settings.py  lock.py  mongo.py  shell.py  utils.py  wsgi.py
play/administration/: account.py  wsgi.py
play/administration/templates/: index.html
play/api/: albums.py  application.py  artists.py  directories.py  me.py  playlists.py  tracks.py  users.py  wsgi.py
play/application/: albums.py  application.py  artists.py  auth.py  blueprint.py  csrf.py  default_settings.py  directories.py  me.py  playlists.py  tracks.py  users.py  wsgi.py
play/models/: users.py
play/static/: wsgi.py
play/static/static/: admin.html  index.html
play/static_files/: index.html
play/task/: application.py  utils.py
tests/: conftest.py  test_lock.py  test_shell.py  test_utils.py  test_wsgi.py
tests/admin/: test_account.py
tests/api/: test_application.py  test_artists.py  test_csrf.py  test_directories.py  test_me.py  test_playlists.py  test_tracks.py  test_users.py
tests/application/: test_albums.py  test_artists.py  test_auth.py  test_csrf.py  test_directories.py  test_me.py  test_playlists.py  test_tracks.py  test_users.py
tests/fixtures/: albums.json  artists.json  directories.json  playlists.json  tracks.json  users.json
tests/models/: __init__.py  test_users.py
tests/static/: test_wsgi.py
tests/task/: test_application.py  test_utils.py
(+10 files in other folders)
