[metadata]
name = play
version = 0.0.1
author = Julian Hille
author-email = j.hille484@gmail.com
description-file = README.rst
home-page = https://github.com/julianhille/playme
classifier =
    Environment :: Console
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Framework :: Flask
    Topic :: Software Development :: Libraries


[files]
packages = play
data_files =
    etc/play = etc/play/config.yml
